fixed the responsiveness on mobile view

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ form label {
 
 @media (max-width: 400px){
   .main-container {
-    min-height: 800px;
+    min-height: 750px;
   }
   
 }
